# hzpp-delay-stats

./: .dockerignore  .env  .gitignore  Architecture.excalidraw  Cargo.toml  LICENSE  README.md  docker-compose.yaml  dockerfile
.sqlx/: query-019000bdbac84e9c014d8bd98f0d8b8ce54143098cb1900f8849b5f45a497cad.json  query-3f91ed826098f2d78d8aac0fa2257e17f7074bb6008777905e83a40bb74f01ef.json  query-6ea2a8c3e95127d64fc962799016d456a5a2f23e7fac99b36dd45da125323990.json  query-b9b44e67969eaceb80ad00d57d749d11eedd0857d68c4169f602ce66154299b2.json  query-c0ab6a1b47200ab847586ccb4e537baad169d292a7178c7f14489de69e643620.json  query-c7b429c82633792066cc5e03276bca52ea8bb55a1c14213deb9672f2c649047a.json
client/: .prettierignore  package-lock.json  package.json
client/src/routes/: Header.svelte
client/src/routes/sverdle/: words.server.ts
documentation/: Architecture.drawio  Architecture.excalidraw  HZPP Planer.postman_collection.json  WebApi.md  openapi.yml
documentation/example_responses/: delay.html  prodaja.hzpp.hr.html  redovit.html  routes.json
migrations/: 20231120164348_initial_migration.down.sql  20231120164348_initial_migration.up.sql
src/: background_services.rs  dal.rs  main.rs  utils.rs
src/background_services/: data_fetcher.rs  delay_checker.rs  mod.rs  route_fetcher.rs
src/background_services/route_fetcher/: mod.rs
src/dal/: routes.rs  stations.rs  stops.rs
src/model/: calendar.rs  db_model.rs  hzpp_api_model.rs  mod.rs  route.rs  stop.rs
