[package]
name = "hzpp_delays"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.0"
itertools = "0.11"
reqwest = "0.11"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
opentelemetry = "0.20"
opentelemetry_sdk = { version = "0.20", features = ["rt-tokio"] }
tracing = "0.1"
tracing-opentelemetry = { version = "0.21" }
tracing-subscriber = { version = "0.3", features = [
    "tracing-log",
    "env-filter",
] }
opentelemetry-otlp = "0.13"
tokio-cron-scheduler = "0.9"
chrono = "0.4"
dotenvy = "0.15.7"
