[package]
name = "hzpp_delay_stats"
version = "0.1.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
debug = "line-tables-only"

[dependencies]
# tracing and opentelemetry
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
tracing = "0.1"
tracing-opentelemetry = { version = "0.22" }
tracing-subscriber = { version = "0.3", features = [
    "tracing-log",
    "env-filter",
] }
opentelemetry-otlp = "0.14"
tracing-appender = "0.2.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }
regex = "1.0"
itertools = "0.12"
reqwest = "0.11"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = [
    "chrono",
    "postgres",
    "runtime-tokio-rustls",
] }
postgres = "0.19.7"
rustls = "0.22.1"
chrono-tz = "0.8.4"
derivative = "2.2.0"
futures = "0.3.30"
